--- a/src_useState/components/darkModeSwitch/darkModeSwitch.scss
+++ b/src_useState/components/darkModeSwitch/darkModeSwitch.scss
@@ -1,10 +1,10 @@
-.toggleSwitch {
+.toggle-switch {
       position: relative;
       width: 60px;
       height: 30px;
 }
 
-.toggleSwitch input {
+.toggle-switch input {
     opacity: 0;
     width: 0;
     height: 0;
